--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,21 @@
-[submodule "vimdotfiles"]
-	path = vimdotfiles
-	url = https://github.com/greveritt/vimdotfiles.git
+[submodule ".vim/pack/my-plugins/opt/vim-gitgutter"]
+	path = .vim/pack/my-plugins/opt/vim-gitgutter
+	url = git@github.com:airblade/vim-gitgutter.git
+[submodule ".vim/pack/my-plugins/opt/vim-rspec"]
+	path = .vim/pack/my-plugins/opt/vim-rspec
+	url = git@github.com:thoughtbot/vim-rspec.git
+[submodule ".vim/pack/my-plugins/start/ack.vim"]
+	path = .vim/pack/my-plugins/start/ack.vim
+	url = git@github.com:mileszs/ack.vim.git
+[submodule ".vim/pack/my-plugins/start/editorconfig-vim"]
+	path = .vim/pack/my-plugins/start/editorconfig-vim
+	url = git@github.com:editorconfig/editorconfig-vim.git
+[submodule ".vim/pack/my-plugins/start/vim-fugitive"]
+	path = .vim/pack/my-plugins/start/vim-fugitive
+	url = git@github.com:tpope/vim-fugitive.git
+[submodule ".vim/pack/my-plugins/start/vim-styled-jsx"]
+	path = .vim/pack/my-plugins/start/vim-styled-jsx
+	url = git@github.com:alampros/vim-styled-jsx.git
+[submodule ".vim/pack/my-plugins/start/vim-commentary"]
+	path = .vim/pack/my-plugins/start/vim-commentary
+	url = git@github.com:tpope/vim-commentary.git
