--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule ".vim/pack/my-plugins/start/vim-commentary"]
 	path = .vim/pack/my-plugins/start/vim-commentary
 	url = git@github.com:tpope/vim-commentary.git
+[submodule ".vim/pack/my-plugins/start/fzf.vim"]
+	path = .vim/pack/my-plugins/start/fzf.vim
+	url = git@github.com:junegunn/fzf.vim.git
