--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule ".vim/pack/my-plugins/start/fzf.vim"]
 	path = .vim/pack/my-plugins/start/fzf.vim
 	url = git@github.com:junegunn/fzf.vim.git
+[submodule ".vim/pack/my-plugins/start/vim-endwise"]
+	path = .vim/pack/my-plugins/start/vim-endwise
+	url = git@github.com:tpope/vim-endwise.git
